task15 inverse servlet dependencies, relative servlet urls and resources add servlet description web.xml, spring-context.xml move from static to webapp, add jsp remove jetty, webserver, main class